--- a/z2m-rwl022.yaml
+++ b/z2m-rwl022.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.5.9"
+  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.6.0"
   description: >-
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
@@ -47,137 +47,49 @@ blueprint:
           multiple: true
           options:
             - label: Static Rest
-              value: >
-                {
-                  "preset_id": "e03267e7-9914-4f47-97fe-63c0bd317fe7",
-                  "type": "static"
-                }
+              value: static_rest
             - label: Static Relax
-              value: >
-                {
-                  "preset_id": "e71b2ef3-1b15-4c4b-b036-4b3d6efe58f8",
-                  "type": "static"
-                }
+              value: static_relax
             - label: Static Read
-              value: >
-                {
-                  "preset_id": "035b6ecf-414e-4781-abc7-3911556097cb",
-                  "type": "static"
-                }
+              value: static_read
             - label: Static Concentrate
-              value: >
-                {
-                  "preset_id": "0cbec4e8-d064-4457-986a-fe6078a63f39",
-                  "type": "static"
-                }
+              value: static_concentrate
             - label: Static Bright
-              value: >
-                {
-                  "preset_id": "6d10a807-7330-46d1-b093-c15520ba72c0",
-                  "type": "static"
-                }
+              value: static_bright
             - label: Static Dimmed
-              value: >
-                {
-                  "preset_id": "8f55e62a-e5f8-456a-9e8b-61f314bd4e99",
-                  "type": "static"
-                }
+              value: static_dimmed
             - label: Dynamic Galaxy
-              value: >
-                {
-                  "preset_id": "a6ba3a6e-1e3a-41fd-84f2-f7b021935deb",
-                  "type": "dynamic"
-                }
+              value: dynamic_galaxy
             - label: Dynamic Nighttime
-              value: >
-                {
-                  "preset_id": "cfdb43c7-ccb3-4dd1-b4c7-036e0d74aeb9",
-                  "type": "dynamic"
-                }
+              value: dynamic_nighttime
             - label: Dynamic Sleepy
-              value: >
-                {
-                  "preset_id": "6170702c-f2fc-46fc-99ef-ac98b6c1293e",
-                  "type": "dynamic"
-                }
+              value: dynamic_sleepy
             - label: Dynamic Unwind
-              value: >
-                {
-                  "preset_id": "f7c2f4ce-f957-4745-b9bf-651d5b81c9a6",
-                  "type": "dynamic"
-                }
+              value: dynamic_unwind
             - label: Dynamic Storybook
-              value: >
-                {
-                  "preset_id": "4f76cd74-28db-455b-9c11-04654be86281",
-                  "type": "dynamic"
-                }
+              value: dynamic_storybook
             - label: Dynamic Shine
-              value: >
-                {
-                  "preset_id": "ded92eba-901e-4675-8a77-2d17d95aac54",
-                  "type": "dynamic"
-                }
+              value: dynamic_shine
             - label: Dynamic Arise
-              value: >
-                {
-                  "preset_id": "d7225176-5cb9-47f3-ab99-8ca9908866fc",
-                  "type": "dynamic"
-                }
+              value: dynamic_arise
             - label: Static Galaxy
-              value: >
-                {
-                  "preset_id": "a6ba3a6e-1e3a-41fd-84f2-f7b021935deb",
-                  "type": "static"
-                }
+              value: static_galaxy
             - label: Static Nighttime
-              value: >
-                {
-                  "preset_id": "cfdb43c7-ccb3-4dd1-b4c7-036e0d74aeb9",
-                  "type": "static"
-                }
+              value: static_nighttime
             - label: Static Sleepy
-              value: >
-                {
-                  "preset_id": "6170702c-f2fc-46fc-99ef-ac98b6c1293e",
-                  "type": "static"
-                }
+              value: static_sleepy
             - label: Static Unwind
-              value: >
-                {
-                  "preset_id": "f7c2f4ce-f957-4745-b9bf-651d5b81c9a6",
-                  "type": "static"
-                }
+              value: static_unwind
             - label: Static Storybook
-              value: >
-                {
-                  "preset_id": "4f76cd74-28db-455b-9c11-04654be86281",
-                  "type": "static"
-                }
+              value: static_storybook
             - label: Static Shine
-              value: >
-                {
-                  "preset_id": "ded92eba-901e-4675-8a77-2d17d95aac54",
-                  "type": "static"
-                }
+              value: static_shine
             - label: Static Arise
-              value: >
-                {
-                  "preset_id": "d7225176-5cb9-47f3-ab99-8ca9908866fc",
-                  "type": "static"
-                }
+              value: static_arise
             - label: Static Aurora
-              value: >
-                {
-                  "preset_id": "940fd864-51e1-4761-95d3-75d4d68835ea",
-                  "type": "static"
-                }
+              value: static_aurora
             - label: Dynamic Aurora
-              value: >
-                {
-                  "preset_id": "940fd864-51e1-4761-95d3-75d4d68835ea",
-                  "type": "dynamic"
-                }
+              value: dynamic_aurora
     dynamic_transition:
       name: Dynamic Transition
       description: Transition time between changes of the dynamic colour states
@@ -347,6 +259,73 @@ trigger:
 variables:
   command: "{{ trigger.id }}"
   included_scenes: !input included_scenes
+  presets:
+    static_rest:
+      preset_id: e03267e7-9914-4f47-97fe-63c0bd317fe7
+      type: static
+    static_relax:
+      preset_id: e71b2ef3-1b15-4c4b-b036-4b3d6efe58f8
+      type: static
+    static_read:
+      preset_id: 035b6ecf-414e-4781-abc7-3911556097cb
+      type: static
+    static_concentrate:
+      preset_id: 0cbec4e8-d064-4457-986a-fe6078a63f39
+      type: static
+    static_bright:
+      preset_id: 6d10a807-7330-46d1-b093-c15520ba72c0
+      type: static
+    static_dimmed:
+      preset_id: 8f55e62a-e5f8-456a-9e8b-61f314bd4e99
+      type: static
+    dynamic_galaxy:
+      preset_id: a6ba3a6e-1e3a-41fd-84f2-f7b021935deb
+      type: dynamic
+    dynamic_nighttime:
+      preset_id: cfdb43c7-ccb3-4dd1-b4c7-036e0d74aeb9
+      type: dynamic
+    dynamic_sleepy:
+      preset_id: 6170702c-f2fc-46fc-99ef-ac98b6c1293e
+      type: dynamic
+    dynamic_unwind:
+      preset_id: f7c2f4ce-f957-4745-b9bf-651d5b81c9a6
+      type: dynamic
+    dynamic_storybook:
+      preset_id: 4f76cd74-28db-455b-9c11-04654be86281
+      type: dynamic
+    dynamic_shine:
+      preset_id: ded92eba-901e-4675-8a77-2d17d95aac54
+      type: dynamic
+    dynamic_arise:
+      preset_id: d7225176-5cb9-47f3-ab99-8ca9908866fc
+      type: dynamic
+    static_galaxy:
+      preset_id: a6ba3a6e-1e3a-41fd-84f2-f7b021935deb
+      type: static
+    static_nighttime:
+      preset_id: cfdb43c7-ccb3-4dd1-b4c7-036e0d74aeb9
+      type: static
+    static_sleepy:
+      preset_id: 6170702c-f2fc-46fc-99ef-ac98b6c1293e
+      type: static
+    static_unwind:
+      preset_id: f7c2f4ce-f957-4745-b9bf-651d5b81c9a6
+      type: static
+    static_storybook:
+      preset_id: 4f76cd74-28db-455b-9c11-04654be86281
+      type: static
+    static_shine:
+      preset_id: ded92eba-901e-4675-8a77-2d17d95aac54
+      type: static
+    static_arise:
+      preset_id: d7225176-5cb9-47f3-ab99-8ca9908866fc
+      type: static
+    static_aurora:
+      preset_id: 940fd864-51e1-4761-95d3-75d4d68835ea
+      type: static
+    dynamic_aurora:
+      preset_id: 940fd864-51e1-4761-95d3-75d4d68835ea
+      type: dynamic
   scene_helper: !input scene_helper
   reset_after: !input reset_after
   tv_entity: !input tv_entity
@@ -406,7 +385,9 @@ variables:
     {% else %}
       0
     {% endif %}
-  current_scene_info: "{{ included_scenes[last_preset_index] | from_json }}"
+  current_scene_info: "{{ presets.get(included_scenes[last_preset_index], {}) }}"
+  first_scene_info: "{{ presets.get(included_scenes[0], {}) }}"
+  next_scene_info: "{{ presets.get(included_scenes[next_preset_index], {}) }}"
   next_preset_index: >-
     {% if command == 'off_press' %}
       {{ (last_preset_index + 1) % (included_scenes | length) }}
@@ -466,20 +447,20 @@ action:
                       targets:
                         entity_id: "{{ target_lights }}"
                   - choose:
-                      - conditions: "{{ (included_scenes[0] | from_json).type == 'static' or (included_scenes[0] | from_json).type == '' }}"
+                      - conditions: "{{ first_scene_info.type == 'static' or first_scene_info.type == '' }}"
                         sequence:
                           - action: scene_presets.apply_preset
                             data:
-                              preset_id: "{{ (included_scenes[0] | from_json).preset_id }}"
+                              preset_id: "{{ first_scene_info.preset_id }}"
                               targets:
                                 entity_id: "{{ target_lights }}"
                               shuffle: false
                               smart_shuffle: false
-                      - conditions: "{{ (included_scenes[0] | from_json).type == 'dynamic' }}"
+                      - conditions: "{{ first_scene_info.type == 'dynamic' }}"
                         sequence:
                           - action: scene_presets.start_dynamic_scene
                             data:
-                              preset_id: "{{ (included_scenes[0] | from_json).preset_id }}"
+                              preset_id: "{{ first_scene_info.preset_id }}"
                               targets:
                                 entity_id: "{{ target_lights }}"
                               transition: !input dynamic_transition
@@ -503,20 +484,20 @@ action:
               targets:
                 entity_id: "{{ target_lights }}"
           - choose:
-              - conditions: "{{ (included_scenes[0] | from_json).type == 'static' or (included_scenes[0] | from_json).type == '' }}"
+              - conditions: "{{ first_scene_info.type == 'static' or first_scene_info.type == '' }}"
                 sequence:
                   - action: scene_presets.apply_preset
                     data:
-                      preset_id: "{{ (included_scenes[0] | from_json).preset_id }}"
+                      preset_id: "{{ first_scene_info.preset_id }}"
                       targets:
                         entity_id: "{{ target_lights }}"
                       shuffle: false
                       smart_shuffle: false
-              - conditions: "{{ (included_scenes[0] | from_json).type == 'dynamic' }}"
+              - conditions: "{{ first_scene_info.type == 'dynamic' }}"
                 sequence:
                   - action: scene_presets.start_dynamic_scene
                     data:
-                      preset_id: "{{ (included_scenes[0] | from_json).preset_id }}"
+                      preset_id: "{{ first_scene_info.preset_id }}"
                       targets:
                         entity_id: "{{ target_lights }}"
                       transition: !input dynamic_transition
@@ -566,20 +547,20 @@ action:
               targets:
                 entity_id: "{{ target_lights }}"
           - choose:
-              - conditions: "{{ (included_scenes[next_preset_index] | from_json).type == 'static' }}"
+              - conditions: "{{ next_scene_info.type == 'static' }}"
                 sequence:
                   - action: scene_presets.apply_preset
                     data:
-                      preset_id: "{{ (included_scenes[next_preset_index] | from_json).preset_id }}"
+                      preset_id: "{{ next_scene_info.preset_id }}"
                       targets:
                         entity_id: "{{ target_lights }}"
                       shuffle: false
                       smart_shuffle: false
-              - conditions: "{{ (included_scenes[next_preset_index] | from_json).type == 'dynamic' }}"
+              - conditions: "{{ next_scene_info.type == 'dynamic' }}"
                 sequence:
                   - action: scene_presets.start_dynamic_scene
                     data:
-                      preset_id: "{{ (included_scenes[next_preset_index] | from_json).preset_id }}"
+                      preset_id: "{{ next_scene_info.preset_id }}"
                       targets:
                         entity_id: "{{ target_lights }}"
                       transition: !input dynamic_transition
